--- a/src/lk-profile.html
+++ b/src/lk-profile.html
@@ -102,6 +102,12 @@
                                 </div>
                             </div>
 
+                            <div class="cart-box">
+                                <a href="cart.html" class="cart">Корзина
+                                    <span class="cart-count">99</span>
+                                </a>
+                            </div>
+
                             <div class="dropdown-menu dropdown-menu--profile">
                                 <p class="dropdown-menu-title">
                                     <img src="img/avatar.svg" class="dropdown-menu-avatar" alt="">
