--- a/src/lk-vacancy.html
+++ b/src/lk-vacancy.html
@@ -102,6 +102,10 @@
                                 </div>
                             </div>
 
+                            <div class="cart-box">
+                                <a href="cart-empty.html" class="cart">Корзина</a>
+                            </div>
+
                             <div class="dropdown-menu dropdown-menu--profile">
                                 <p class="dropdown-menu-title">
                                     <img src="img/avatar.svg" class="dropdown-menu-avatar" alt="">
