--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,11 @@
                             <button class="search-btn" type="submit">Найти</button>
                         </form>
                     </div>
+                    <div class="header-meta box">
+                        <div class="cart-box">
+                            <a href="cart-empty.html" class="cart">Корзина</a>
+                        </div>
+                    </div>
                     <div class="header-links">
                         <ul class="header-links-list">
                             <li class="header-links-item">
