--- a/src/index.html
+++ b/src/index.html
@@ -127,18 +127,18 @@
 						<div class="column column-sm-full column-third column--thin box">
 							<div class="card">
 								<div class="card-photo">
-									<a href="#">
+									<a href="course-single.html">
 										<img src="img/card_1.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-wrapper">
 									<div class="card-head card-head--fix-height">
 										<h3 class="card-title">
-											<a href="#">Android разработка с нуля до профессиона...</a>
+											<a href="course-single.html">Android разработка с нуля до профессиона...</a>
 										</h3>
 									</div>
 									<div class="card-body card-body--fix-height">
-										<p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</a></p>
+										<p><a href="course-single.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</a></p>
 									</div>
 									<div class="card-footer box box-between">
 										<p class="card-small-text card-dark-gray-text">Москва</p>
@@ -151,18 +151,18 @@
 						<div class="column column-sm-full column-third column--thin box">
 							<div class="card">
 								<div class="card-photo">
-									<a href="#">
+									<a href="course-single.html">
 										<img src="img/card_2.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-wrapper">
 									<div class="card-head card-head--fix-height">
 										<h3 class="card-title">
-											<a href="#">An Entire MBA in 1 Course</a>
+											<a href="course-single.html">An Entire MBA in 1 Course</a>
 										</h3>
 									</div>
 									<div class="card-body card-body--fix-height">
-										<p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></p>
+										<p><a href="course-single.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></p>
 									</div>
 									<div class="card-footer box box-between">
 										<p class="card-small-text card-dark-gray-text">Online</p>
@@ -175,18 +175,18 @@
 						<div class="column column-sm-full column-third column--thin box">
 							<div class="card">
 								<div class="card-photo">
-									<a href="#">
+									<a href="course-single.html">
 										<img src="img/card_3.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-wrapper">
 									<div class="card-head card-head--fix-height">
 										<h3 class="card-title">
-											<a href="#">Тестирование ПО для начинающих. Web, Mo...</a>
+											<a href="course-single.html">Тестирование ПО для начинающих. Web, Mo...</a>
 										</h3>
 									</div>
 									<div class="card-body card-body--fix-height">
-										<p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim v.</a></p>
+										<p><a href="course-single.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim v.</a></p>
 									</div>
 									<div class="card-footer box box-between">
 										<p class="card-small-text card-dark-gray-text">Санкт-Петербург</p>
