--- a/src/cart.html
+++ b/src/cart.html
@@ -135,7 +135,7 @@
                                         <a href="lk-resume.html" class="dropdown-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Курсы</a>
+                                        <a href="lk-course.html" class="dropdown-menu-link">Курсы</a>
                                     </li>
                                     <li class="dropdown-menu-item dropdown-menu-item--logout">
                                         <a href="#" class="dropdown-menu-link">Выйти</a>
@@ -172,7 +172,7 @@
                                         <a href="lk-resume.html" class="mobile-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="#" class="mobile-menu-link">Курсы</a>
+                                        <a href="lk-course.html" class="mobile-menu-link">Курсы</a>
                                     </li>
                                 </ul>
                                 <ul class="mobile-menu-lk">
