--- a/src/lk-vacancy.html
+++ b/src/lk-vacancy.html
@@ -121,7 +121,7 @@
                                         <a href="lk-resume.html" class="dropdown-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Курсы</a>
+                                        <a href="lk-course.html" class="dropdown-menu-link">Курсы</a>
                                     </li>
                                     <li class="dropdown-menu-item dropdown-menu-item--logout">
                                         <a href="#" class="dropdown-menu-link">Выйти</a>
@@ -153,7 +153,7 @@
                                         <a href="lk-resume.html" class="mobile-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="#" class="mobile-menu-link">Курсы</a>
+                                        <a href="lk-course.html" class="mobile-menu-link">Курсы</a>
                                     </li>
                                 </ul>
                                 <ul class="mobile-menu-lk">
@@ -194,7 +194,7 @@
                                 <a href="lk-resume.html" class="sidebar-link">Мои резюме</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Курсы</a>
+                                <a href="lk-course.html" class="sidebar-link">Курсы</a>
                             </li>
                             <li class="sidebar-item sidebar-item--logout">
                                 <a href="#" class="sidebar-link">Выход</a>
