--- a/src/lk-course.html
+++ b/src/lk-course.html
@@ -236,7 +236,7 @@
                         <div class="tabs-content active column column-full column-lk card">
                             <div class="box-head box">
                                 <h1>Мои курсы</h1>
-                                <a href="#" class="btn btn--light-blue">Добавить курс</a>
+                                <a href="lk-add-course.html" class="btn btn--light-blue">Добавить курс</a>
                             </div>
 
                             <div class="box-body">
