--- a/src/contacts.html
+++ b/src/contacts.html
@@ -2,11 +2,11 @@
 <html lang="ru">
     <head>
         //= html/_head.html
-        <title>GoStudy - Внутренняя ошибка сервера</title>
+        <title>GoStudy - Контакты</title>
     </head>
 
     <body>
-        <div class="wrapper wrapper-flex--sm">
+        <div class="wrapper">
             <header class="fixed lk-header">
                 <div class="container-full">
                     <div class="header-box box">
@@ -135,7 +135,7 @@
                                         <a href="lk-resume.html" class="dropdown-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Курсы</a>
+                                        <a href="lk-course.html" class="dropdown-menu-link">Курсы</a>
                                     </li>
                                     <li class="dropdown-menu-item dropdown-menu-item--logout">
                                         <a href="#" class="dropdown-menu-link">Выйти</a>
@@ -172,7 +172,7 @@
                                         <a href="lk-resume.html" class="mobile-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="#" class="mobile-menu-link">Курсы</a>
+                                        <a href="lk-course.html" class="mobile-menu-link">Курсы</a>
                                     </li>
                                 </ul>
                                 <ul class="mobile-menu-lk">
@@ -180,7 +180,7 @@
                                         <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="#" class="mobile-menu-link">Контакты</a>
+                                        <a href="contacts.html" class="mobile-menu-link">Контакты</a>
                                     </li>
                                     <li class="mobile-menu-item mobile-menu-item--logout">
                                         <a href="#" class="mobile-menu-link">Выйти</a>
@@ -192,14 +192,23 @@
                 </div>
             </header>
 
-            <main>
-                <div class="container">
-                    <div class="error-box">
+            <main class="contacts">
+                <div class="container-full">
+                    <h1 class="title title-blue">Контакты</h1>
+
+                    <div class="box box-row">
                         <div class="column column-md-full column-half">
-                            <div class="error-icon"><img src="img/500.svg" alt="Internal Server Error"></div>
-                            <p class="error-title">500</p>
-                            <p class="error-subtitle">Internal Server Error</p>
-                            <p class="error-desc">Внутренняя ошибка сервера.</p>
+                            <h2>OOO “Гоу Стади”</h2>
+                            <p><span>Почта для общих вопросов:</span>support@gostudy.pro</p>
+                            <p><span>Почта по вопросам сотрудничества и СМИ:</span>office@gostudy.pro</p>
+                            <p><span>Адрес:</span>Санкт-Петербург, Транспортный переулок, дом 10, литер А, помещение 1-Н</p>
+                            <p><span>Генеральный директор:</span>Говейнович Федор Михайлович</p>
+                            <p><span>ИНН:</span>7842169410</p>
+                            <p><span>КПП:</span>784201001</p>
+                            <p><span>Расчётнй счёт:</span>40702810803500016596</p>
+                            <p><span>Банк:</span>Точка ПАО Банка “ФК Открытие”</p>
+                            <p><span>БИК:</span>044525999</p>
+                            <p><span>Корреспондентский счёт:</span>30101810845250000999</p>
                         </div>
                     </div>
                 </div>
