--- a/src/401.html
+++ b/src/401.html
@@ -16,7 +16,7 @@
                         <nav class="menu">
                             <ul class="menu-list">
                                 <li class="menu-item"><a href="vacancy.html" class="menu-link menu-link--active">Вакансии</a></li>
-                                <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+                                <li class="menu-item"><a href="contacts.html" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
                         <div class="search">
@@ -49,7 +49,7 @@
                                     <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
                                 </li>
                                 <li class="mobile-menu-item">
-                                    <a href="#" class="mobile-menu-link">Контакты</a>
+                                    <a href="contacts.html" class="mobile-menu-link">Контакты</a>
                                 </li>
                                 <li class="mobile-menu-item mobile-menu-item--divider">
                                     <a href="#loginForm" class="mobile-menu-link btn-modal">Войти</a>
