--- a/src/404.html
+++ b/src/404.html
@@ -28,7 +28,7 @@
                                         <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+                                <li class="menu-item"><a href="contacts.html" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
                         <div class="search">
@@ -180,7 +180,7 @@
                                         <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="#" class="mobile-menu-link">Контакты</a>
+                                        <a href="contacts.html" class="mobile-menu-link">Контакты</a>
                                     </li>
                                     <li class="mobile-menu-item mobile-menu-item--logout">
                                         <a href="#" class="mobile-menu-link">Выйти</a>
