--- a/src/419.html
+++ b/src/419.html
@@ -16,7 +16,7 @@
                         <nav class="menu">
                             <ul class="menu-list">
                                 <li class="menu-item"><a href="vacancy.html" class="menu-link menu-link--active">Вакансии</a></li>
-                                <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+                                <li class="menu-item"><a href="contacts.html" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
                         <div class="search">
