--- a/src/429.html
+++ b/src/429.html
@@ -28,7 +28,7 @@
                                         <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+                                <li class="menu-item"><a href="contacts.html" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
                         <div class="search">
