--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                     <nav class="menu">
                         <ul class="menu-list">
                             <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a></li>
-                            <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+                            <li class="menu-item"><a href="contacts.html" class="menu-link">Контакты</a></li>
                         </ul>
                     </nav>
                     <div class="search">
@@ -47,7 +47,7 @@
                             <li class="mobile-menu-item">
                                 <a href="vacancy.html" class="mobile-menu-link">Вакансии</a></li>
                             <li class="mobile-menu-item">
-                                <a href="#" class="mobile-menu-link">Контакты</a>
+                                <a href="contacts.html" class="mobile-menu-link">Контакты</a>
                             </li>
                             <li class="mobile-menu-item mobile-menu-item--divider">
                                 <a href="#loginForm" class="mobile-menu-link btn-modal">Войти</a>
