--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -12,13 +12,13 @@
 		<div class="footer-box box">
 			<div class="footer-column">
 				<ul class="privacy-list">
-					<li class="privacy-item"><a href="#" class="privacy-link">Пользовательское соглашение</a></li>
+					<li class="privacy-item"><a href="public-offer.html" class="privacy-link">Пользовательское соглашение</a></li>
 					<li class="privacy-item"><a href="#" class="privacy-link">Политика конфиденциальности</a></li>
 				</ul>
 			</div>
 			<div class="footer-column">
 				<p class="copyright">Go Study © 2019</p>
-				<a class="footer-link" href="#">Контакты</a>
+				<a class="footer-link" href="contacts.html">Контакты</a>
 			</div>
 		</div>
 	</div>
